# labbook-bku

./: .env.example  .firebaserc  .gitignore  AGENTS.md  AI_ARCHITECTURE.md  ARCHITECTURE.md  AUDIT_LOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  ROADMAP.md  WORKFLOW.md  add_dash_booking_navigation.py  apply_dark_mode.py  apply_mobile_ux.py  apply_refactor.py  apply_refactor_v2.py  apply_refactor_v3.py  commitlint.config.js  cors.json  database.rules.json  firebase.json  firestore.indexes.json  firestore.rules  fix_search_stuck.py  index.html  package-lock.json  package.json  pdf-report.js  storage.rules  tailwind.config.js  tsconfig.json  up.sh.old  vite.config.js  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
docs/: commercial-roadmap.md  labbook-extensions.md  landing-architecture.md  long-term-roadmap.md  onboarding.md  research-schema.md
docs/ai/: README.md
docs/design/: README.md
docs/stress-tests/: 2026-05-09-A2.md
extras/origin-integration/: README.md  (+3 more)
functions/: .env.example  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
public/: manifest.json  robots.txt  sw.js
python-service/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
python-service/app/: __init__.py  auth.py  config.py  main.py
scripts/: bench-latency.mjs  migrate-notifications-r122.mjs  migrate-role-claims-r150c-fu.mjs  migrate-tenant-claims-r150c.mjs  subset-fonts.mjs  test-firestore-rules-r150c.mjs
(+479 files in other folders)
