[project]
name = "labbook-python-service"
version = "0.1.0"
description = "Materials informatics compute service for LabBook BKU AI module"
readme = "README.md"
requires-python = ">=3.13"

# Round 107: minimal deps để verify pipeline.
# Round 131+ sẽ thêm pymatgen, scipy, lmfit, impedance.py khi cần.
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "google-auth>=2.35.0",          # Verify Firebase ID tokens
    "httpx>=0.28.0",                # Async HTTP client
]

[project.optional-dependencies]
# Khi cần materials informatics, install: uv sync --extra materials
materials = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "lmfit>=1.3.0",
    "pymatgen>=2024.10.0",
    "ase>=3.23.0",
    "impedance>=1.7.0",
    "matplotlib>=3.9.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.uv]
# uv-specific config

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
